-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 16, 17
-
Component/s: hotspot
-
b11
-
generic
The setter is error-prone. it unconditionally sets _visited false.
it's useless because the member variable is initialized to false.
file: debuginfo.hpp
class ObjectValue: public ScopeValue {
...
void set_visited(bool visited) { _visited = false; }
}
link: https://github.com/openjdk/jdk/blob/master/src/hotspot/share/code/debugInfo.hpp#L152
it's useless because the member variable is initialized to false.
file: debuginfo.hpp
class ObjectValue: public ScopeValue {
...
void set_visited(bool visited) { _visited = false; }
}
link: https://github.com/openjdk/jdk/blob/master/src/hotspot/share/code/debugInfo.hpp#L152