8261675: ObjectValue::set_visited(bool) sets _visited false